import easyaccept.EasyAccept;

public class Main{
    public static void main(String[] args) {

        String[] testCase1 = {"Facade", "us1_1.txt"};
        String[] testCase2 = {"Facade", "us1_2.txt"};
        String[] testCase3 = {"Facade", "us2_1.txt"};
        String[] testCase4 = {"Facade", "us2_2.txt"};
        String[] testCase5 = {"Facade", "us3_1.txt"};
        String[] testCase6 = {"Facade", "us3_2.txt"};
        String[] testCase7 = {"Facade", "us4_1.txt"};
        String[] testCase8 = {"Facade", "us4_2.txt"};




        EasyAccept.main(testCase1);
        EasyAccept.main(testCase2);
        EasyAccept.main(testCase3);
        EasyAccept.main(testCase4);
        EasyAccept.main(testCase5);
        EasyAccept.main(testCase6);
        EasyAccept.main(testCase7);
        EasyAccept.main(testCase8);


    }
}